tests/negative/gold/block_call_test.gold
tests/negative/block_call_test.toit:6:4: error: Unexpected block
  (: it).call 499
   ^~~~
Compilation failed.
